Backport r246996

2017-05-29  Martin Liska  <mliska@suse.cz>

	Backport from mainline
	2017-04-19  Richard Biener  <rguenther@suse.de>

	PR ipa/65972
	* auto-profile.c (afdo_vpt_for_early_inline): Update SSA
	when needed by AutoPGO.

From-SVN: r248568